--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="manifest.json" />
     <!--
 
-      
+
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Diani App</title>
-    <script type="text/js" src="registerServiceWorker.js", async ></script>
+    <script type="text/js" src="registerServiceWorker.js" async ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
