--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Diani App</title>
+    <script type="text/js" src="clear-cache.js" async></script>
     <script type="text/js" src="registerServiceWorker.js" async ></script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
