--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="DianiApp" />
+    <meta name="google-site-verification" content="QoR4pA9ujIG41-hd874LyQ5nPTfR23omyvv6AaL5NpI" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/maskable_icon_x48.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
