--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="DianiApp" />
     <meta name="google-site-verification" content="QoR4pA9ujIG41-hd874LyQ5nPTfR23omyvv6AaL5NpI" />
+    <script type="text/js" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3733538819337098"
+     crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/maskable_icon_x48.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
