--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="DianiApp" />
     <meta name="google-site-verification" content="QoR4pA9ujIG41-hd874LyQ5nPTfR23omyvv6AaL5NpI" />
-    <script type="text/js" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3733538819337098"
-     crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3733538819337098"
+    crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/maskable_icon_x48.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="manifest.json" />
+    
     <!--
 
 
@@ -29,6 +30,10 @@
     <title>Diani App</title>
     <script type="text/js" src="clear-cache.js" async></script>
     <script type="text/js" src="registerServiceWorker.js" async></script>
+    <script async>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <base href="/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
