--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,15 @@
     <script async>
           (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6E9KV4GKH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-Q6E9KV4GKH');
+    </script>
     <base href="/" />
   </head>
   <body>
