--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,10 @@
     <title>Diani App</title>
     <script type="text/js" src="clear-cache.js" async></script>
     <script type="text/js" src="registerServiceWorker.js" async></script>
-    <script async>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <script type="text/js" src="google-scripts.js" async></script>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6E9KV4GKH"></script>
-    <script>
+    <script async type="text/js" src="https://www.googletagmanager.com/gtag/js?id=G-Q6E9KV4GKH"></script>
+    <script async>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
